Desafio/force-app/main/default/objects/Cotacao__c/Cotacao__c.object-meta.xml
<CustomObject>
    <label>Cotação</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cotações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>