Desafio/force-app/main/default/objects/Cotacao__c/fields/Data_da_Cotacao__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Cotacao__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data da Cotação</label>
    <type>Date</type>
</CustomField>