Desafio/force-app/main/default/objects/Cotacao__c/fields/Data_de_Validade_da_Cotacao__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Validade_da_Cotacao__c</fullName>
    <formula>TODAY() + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de Validade da Cotação</label>
    <type>Date</type>
</CustomField>