Desafio/force-app/main/default/objects/Cotacao__c/fields/Nome_do_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome do Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Cota_es</relationshipName>
    <type>Lookup</type>
</CustomField>