Desafio/force-app/main/default/objects/Cotacao__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Produto__c</referenceTo>
    <relationshipName>Cota_es</relationshipName>
    <type>Lookup</type>
</CustomField>