Desafio/force-app/main/default/objects/Cotacao__c/fields/Valor_Total__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total__c</fullName>
    <label>Valor Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>